Fix spacing

--- a/src/Work.css
+++ b/src/Work.css
@@ -92,6 +92,7 @@
 @media screen and (max-width: 1000px) {
   .Work {
     margin-left: 0;
+    margin-top: -35px;
   }
 
   .Work ul {
